[package]
name = "msb"
version = "0.1.0"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
description = "My Sway Bar"


[dependencies]
chrono = { version = "0.4.38", features = ["alloc", "clock", "now", "std"], default-features = false }
nispor = "1.2.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["signal", "rt-multi-thread"] }
